<resources>
    <string name="app_name">News</string>
    <string name="app_title">NewsApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="search">Search</string>
    <string name="search_for_news">Search For News</string>
    <string name="enter_user_name">Enter user name</string>
    <string name="enter_password">Enter Password</string>
    <string name="emailPasswordError">E-mail or password didn\'t work</string>
    <string name="save_password">Save Password</string>
    <string name="login">Login</string>
    <string name="password_error">Password Invalid</string>
    <string name="enter_e_mail">Enter e-mail</string>
    <string name="create_acount"><u>Create Acount</u></string>
    <string name="your_string"><u>Create Account</u></string>
    <string name="create_user_name">Create User Name</string>
    <string name="enter_valid_e_mail">Enter Valid E-mail</string>
    <string name="confirm_e_mail">Confirm E-mail</string>
    <string name="create_password">Create Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="confirm_your_password">Confirm your password</string>
    <string name="cancel">Cancel</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="invalid_user_name">User Name Invalid</string>
    <string name="empty_password">Empty Password</string>
    <string name="user_name_invalid">User Name Invalid</string>
    <string name="password_confirm_error">Password didn\'t mach</string>
    <string name="email_invalid">E-mail invalid</string>
    <string name="email_mach">E-mail didn\'t mach</string>
    <string name="mandatory_field">Mandatory Field</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="invalid_password">Invalid Password</string>
    <string name="invalid_email">Invalid e-mail</string>
    <string name="email_match">E-mail didn\'t match</string>
    <string name="login_in_newsapp">Login in NewsApp</string>
    <string name="welcome_to_news_app">Welcome to News App</string>
    <string name="checkbox_save_login">Remember me</string>
    <string name="select_at_least_1_subject">Select at least 1 subject</string>
    <string name="top_headlines">Top Headlines</string>
    <string name="interests">Interests</string>
    <string name="name">Name</string>
    <string name="change_data">Change Data</string>
    <string name="save_data">Save Data</string>
    <string name="change_interests">Change Interests</string>
    <string name="enter_last_password">Enter Last Password</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="profile">Profile</string>
    <string name="email">E-mail: %s</string>
    <string name="username">User Name: %s</string>
    <string name="password">Password: %s</string>
    <string name="nothing_saved_yet">Nothing saved yet ;)</string>
</resources>