<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.register.usernamefragment.UserNameFragment">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtInputUserName"
        style="@style/FormEditTextInput"
        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtCreateUser"
            style="@style/FormEditText"
            android:hint="@string/create_user_name"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtInputEmail"
        style="@style/FormEditTextInput"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtInputUserName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtEnterEmail"
            style="@style/FormEditText"
            android:hint="@string/enter_e_mail"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtInputConfirmEmail"
        style="@style/FormEditTextInput"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtInputEmail">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtConfirmEmail"
            style="@style/FormEditText"
            android:hint="@string/confirm_e_mail"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonNext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:background="@drawable/button_fill_bg"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonCancel"
        app:layout_constraintEnd_toEndOf="@+id/txtInputConfirmEmail"
        app:layout_constraintStart_toStartOf="@+id/txtInputConfirmEmail" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonCancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:background="@drawable/button_white_shape"
        android:text="@string/cancel"
        android:textAllCaps="false"
        android:textColor="@color/button"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/buttonNext"
        app:layout_constraintStart_toStartOf="@+id/buttonNext" />

</androidx.constraintlayout.widget.ConstraintLayout>